added in all module info files and javafx needed tests as tasks via gradle