@@ -8,7 +8,17 @@ dependencies {
 
 javafx {
   version = "18.0.1"
-  modules = listOf("javafx.controls", "javafx.graphics", "javafx.media")
+  modules = listOf("javafx.graphics", "javafx.media")
+}
+
+tasks {
+  task<JavaExec>("engineTest") {
+    setupJavaFx(this)
+
+    group = "Execution"
+    description = "A more involved test which tests the storm engines many components and uses multiple states"
+    mainClass.set("org.storm.engine.StormTest")
+  }
 }
 
 publishing {
@@ -20,5 +30,25 @@ publishing {
 
       from(components["java"])
     }
+  }
+}
+
+
+fun setupJavaFx(exec: JavaExec) {
+  exec.doFirst {
+    // Setup our class paths
+    sourceSets.main.configure {
+      exec.classpath(this.runtimeClasspath.asPath)
+    }
+    sourceSets.test.configure {
+      exec.classpath(this.runtimeClasspath.asPath)
+    }
+
+    // For some reason tasks are ignored by the JavaFx Plugin (because why not) so we have to
+    // do what the plugin does ourselves
+    exec.jvmArgs = listOf(
+            "--module-path", exec.classpath.asPath,
+            "--add-modules", "javafx.graphics,javafx.media"
+    )
   }
 }
